# OpenCTM

./: CMakeLists.txt
cmake/: OpenCTMConfig.cmake.in
lib/: compressMG2.c  openctm.c  openctm.h
